# picowaveshare

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt
.claude/: settings.local.json
docs/: FIRMWARE_SETUP.md  HARDWARE.md  PINOUT.md  PROTOCOL.md
micropython/: config.py  main.py  protocol.py  relay_controller.py
python/examples/: basic_control.py
python/tests/: __init__.py  conftest.py  test_controller.py  test_discovery.py  test_exceptions.py  test_protocol.py
python/waveshare_relay/: __init__.py  controller.py  discovery.py  exceptions.py  protocol.py
tests/: check_ports.py  test_set_command.py  test_set_comprehensive.py  test_utils.py
tests/hardware_verification/: check_serial.py  test_crash_investigation.py  test_memory_stability.py  test_peripherals.py  test_protocol.py  test_protocol_integrated.py  test_protocol_simple.py  test_relays.py  test_uart.py  verify_all_pins.py  verify_connection.py
